<resources>
    <string name="app_name">Auto NVH</string>
    <string name="tab_1">Pulley Ratios</string>
    <string name="tab_2">Accel.</string>
    <string name="OBDIIReadings">OBDII Readings</string>
    <string name="tab_3">OBDII</string>
    <string name="tab_4">Audio</string>
    <string name="tab_5">FFT</string>
    <string name="maps">maps</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="quit">Quit</string>
    <string name="bluetooth_tab_paired">Paired Devices</string>
    <string name="bluetooth_tab_scan">Scan for Devices</string>
    <string name="menu_1">Settings</string>
    <string name="menu_2">Help</string>
    <string name="menu_3">About</string>
    <string name="b_startR">Record</string>
    <string name="b_startP">Play</string>
    <string name="b_stopR">Stop Recording</string>
    <string name="b_stopP">Stop Playing</string>
    <string name="t_filename">Enter filename</string>
    <string name="tab_4m">Recording &amp; Playback</string>
    <string name="xAxisLabel">X Axis:\u0020</string>
    <string name="yAxisLabel">Y Axis:\u0020</string>
    <string name="zAxisLabel">Z Axis:\u0020</string>
    <string name="ratio1">Ratio 1 Enabled</string>
    <string name="copyright">BYU-Idaho\nCopyright &#169; 2016</string>
</resources>
