<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_4m"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_startR"
        android:id="@+id/bRec"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_startP"
        android:id="@+id/bPlay"
        android:layout_below="@id/bRec"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/t_filename"
        android:ems="10"
        android:id="@+id/tFilename"
        android:layout_marginTop="10dp"
        android:layout_below="@id/bPlay"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginTop="210dp"
        android:id="@+id/audio_graph" />

</RelativeLayout>